Added font awesome

--- a/index.html
+++ b/index.html
@@ -34,15 +34,17 @@
       crossorigin="anonymous"
     ></script>
     <script
-      src="https://kit.fontawesome.com/ddc3ee268a.js"
+      src="https://kit.fontawesome.com/de161a42cf.js"
       crossorigin="anonymous"
     ></script>
+
     <title>Document</title>
   </head>
   <body>
     <div class="d-flex bg-warning">
       <h1>Hello world</h1>
       <p>Hi there</p>
+      <i class="fa-brands fa-instagram"></i>
     </div>
   </body>
 </html>
