--- a/index.html
+++ b/index.html
@@ -41,10 +41,11 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="d-flex bg-warning">
-      <h1>Hello world</h1>
-      <p>Hi there</p>
-      <i class="fa-brands fa-instagram"></i>
+    <div class="hero">
+      <p>👋Hello, I am</p>
+      <h1>Patricia Pereira</h1>
+      <h2 class="mb-5">Front-end developer based in South Africa</h2>
+      <div><a href="#" class="btn btn-branding">Contact me</a></div>
     </div>
   </body>
 </html>
