--- a/index.html
+++ b/index.html
@@ -45,6 +45,28 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="index.html">
+          <img
+            src="images/logo.png"
+            alt="Logo"
+            class="logo d-none d-md-block"
+          />
+          <img
+            src="images/logo-small.jpg"
+            alt=""
+            class="logo d-block d-md-none"
+          />
+        </a>
+        <ul>
+          <li class="active"><a href="index.html"> Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="work.html">Work</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
     <div class="hero">
       <p>👋 Hello I am</p>
       <h1>Patricia Pereira</h1>
