--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content=" Contact Patricia. Patricia is a front-end engineer based in Portugal"
+    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
@@ -42,10 +46,41 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles/portfolio.css" />
-    <title>Document</title>
+    <title>Contact Patricia - Patricia Pereira</title>
   </head>
 
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="index.html" title="Homepage">
+          <img
+            src="images/logo.png"
+            alt="Logo"
+            class="logo d-none d-md-block"
+          />
+          <img
+            src="images/logo-small.jpg"
+            alt="Patricia logo"
+            class="logo d-block d-md-none"
+          />
+        </a>
+        <ul>
+          <li>
+            <a href="index.html" title="Homepage"> Home</a>
+          </li>
+          <li>
+            <a href="about.html" title="About page">About</a>
+          </li>
+          <li>
+            <a href="work.html" title="Patricia work">Work</a>
+          </li>
+          <li class="active">
+            <a href="contact.html" title="contact Patricia">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-5">Let's get in touch!</h1>
@@ -67,5 +102,60 @@
         </p>
       </div>
     </div>
+    <footer class="container">
+      <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+        <div>
+          <h3>Work Inquiry</h3>
+          <p class="text-muted">Let's work together</p>
+        </div>
+        <div>
+          <a
+            href="contact.html"
+            class="btn btn-branding"
+            title="contact Patricia"
+            >Contact me
+          </a>
+        </div>
+      </div>
+      <div class="d-flex justify-content-center mb-5">
+        <a
+          href="mailto:patricia@gmail.com"
+          class="email-link"
+          tiitle="email partricia"
+          >patricia@gmail.com</a
+        >
+      </div>
+      <div class="social-links d-flex justify-content-center">
+        <a
+          href="https://www.github.com/patricia"
+          target="_blank"
+          title="Github Profile"
+        >
+          <i class="fa-brands fa-github"></i
+        ></a>
+        <a
+          href="https://www.instagram.com/patricia"
+          target="_blank"
+          title="Instagram Profile"
+        >
+          <i class="fa-brands fa-square-instagram"></i
+        ></a>
+        <a
+          href="https://www.twitter.com/patricia"
+          target="_blank"
+          title="Twitter profile"
+        >
+          <i class="fa-brands fa-twitter"></i
+        ></a>
+      </div>
+      <p class="text-center mt-5">
+        ✌️This project was coded by Shecodes, and it is<a
+          href="https://github.com/kea-nelly/protfolio-project"
+          target="_blank"
+        >
+          open-sourced</a
+        >
+      </p>
+    </footer>
   </body>
 </html>
