--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Patricia is a front-end engineer based in Portugal"
+    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
@@ -42,12 +46,13 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles/portfolio.css" />
-    <title>Document</title>
+    <title>Front-end developer - Patricia Pereira</title>
   </head>
+
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="index.html">
+        <a href="index.html" title="Homepage">
           <img
             src="images/logo.png"
             alt="Logo"
@@ -55,15 +60,17 @@
           />
           <img
             src="images/logo-small.jpg"
-            alt=""
+            alt="Patricia logo"
             class="logo d-block d-md-none"
           />
         </a>
         <ul>
-          <li class="active"><a href="index.html"> Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="work.html">Work</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li class="active">
+            <a href="index.html" title="Homepage"> Home</a>
+          </li>
+          <li><a href="about.html" title="About page">About</a></li>
+          <li><a href="work.html" title="Patricia work">Work</a></li>
+          <li><a href="contact.html" title="contact Patricia">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -72,7 +79,9 @@
       <h1>Patricia Pereira</h1>
       <h2 class="mb-5">Front-end developer based in Portugal</h2>
       <div>
-        <a href="#" class="btn btn-branding">Contact me</a>
+        <a href="contact.html" class="btn btn-branding" title="contact me"
+          >Contact me</a
+        >
       </div>
     </div>
     <p class="text-center m-5">
@@ -81,7 +90,11 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/yogurt.png" class="img-fluid" alt="" />
+          <img
+            src="images/yogurt.png"
+            class="img-fluid"
+            alt="yogurt project preview"
+          />
         </div>
         <div class="col">
           <div class="project-description">
@@ -92,7 +105,7 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="#" class="btn btn-branding-outline">Learn more</a>
+            <a href="work.html" class="btn btn-branding-outline">Learn more</a>
           </div>
         </div>
       </div>
@@ -107,18 +120,26 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="#" class="btn btn-branding-outline">Learn more</a>
+            <a href="work.html" class="btn btn-branding-outline">Learn more</a>
           </div>
         </div>
 
         <div class="col d-none d-lg-block">
-          <img src="images/weather.png" class="img-fluid" alt="" />
+          <img
+            src="images/weather.png"
+            class="img-fluid"
+            alt="weather project preview"
+          />
         </div>
       </div>
 
       <div class="row">
         <div class="col d-none d-lg-block">
-          <img src="images/dictionary.png" class="img-fluid" alt="" />
+          <img
+            src="images/dictionary.png"
+            class="img-fluid"
+            alt="dictionary project preview"
+          />
         </div>
         <div class="col">
           <div class="project-description">
@@ -129,36 +150,64 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="#" class="btn btn-branding-outline">Learn more</a>
+            <a href="work.html" class="btn btn-branding-outline">Learn more</a>
           </div>
         </div>
       </div>
       <footer>
         <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
           <div>
-            <h4>Work Inquiry</h4>
+            <h3>Work Inquiry</h3>
             <p class="text-muted">Let's work together</p>
           </div>
           <div>
-            <a href="" class="btn btn-branding">Contact me </a>
+            <a
+              href="contact.html"
+              class="btn btn-branding"
+              title="contact Patricia"
+              >Contact me
+            </a>
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
-          <a href="mailto:patricia@gmail.com" class="email-link"
+          <a
+            href="mailto:patricia@gmail.com"
+            class="email-link"
+            tiitle="email partricia"
             >patricia@gmail.com</a
           >
         </div>
         <div class="social-links d-flex justify-content-center">
-          <a href="https://www.github.com/patricia" target="_blank">
+          <a
+            href="https://www.github.com/patricia"
+            target="_blank"
+            title="Github Profile"
+          >
             <i class="fa-brands fa-github"></i
           ></a>
-          <a href="https://www.instagram.com/patricia" target="_blank">
+          <a
+            href="https://www.instagram.com/patricia"
+            target="_blank"
+            title="Instagram Profile"
+          >
             <i class="fa-brands fa-square-instagram"></i
           ></a>
-          <a href="https://www.twitter.com/patricia" target="_blank">
+          <a
+            href="https://www.twitter.com/patricia"
+            target="_blank"
+            title="Twitter profile"
+          >
             <i class="fa-brands fa-twitter"></i
           ></a>
         </div>
+        <p class="text-center mt-5">
+          ✌️This project was coded by Shecodes, and it is<a
+            href="https://github.com/kea-nelly/protfolio-project"
+            target="_blank"
+          >
+            open-sourced</a
+          >
+        </p>
       </footer>
     </div>
   </body>
