Improving the website

--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles/portfolio.css" />
-    <title>About front-end developer - Patricia Pereira</title>
+    <title>About front-end developer - Kealeboga Nelly Serapane</title>
   </head>
 
   <body>
@@ -80,7 +80,7 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="content">
-            <h1 class="mb-4">Hi I am Patricia Pereira</h1>
+            <h1 class="mb-4">Hi I am Kealeboga Nelly Serapane</h1>
             <h2 class="mt-5">Front-end Developer, based in South Africa</h2>
             <p class="mb-5">
               For anyone who wants to start learning code, this workshop is very
@@ -92,7 +92,7 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <img src="images/Group 18.png" alt="" />
+          <img src="images/Group 18.png" alt="photo of a person" />
         </div>
       </div>
     </div>
@@ -103,47 +103,37 @@
           <p class="text-muted">Let's work together</p>
         </div>
         <div>
-          <a
-            href="contact.html"
-            class="btn btn-branding"
-            title="contact Patricia"
+          <a href="contact.html" class="btn btn-branding" title="contact Nelly"
             >Contact me
           </a>
         </div>
       </div>
       <div class="d-flex justify-content-center mb-5">
         <a
-          href="mailto:patricia@gmail.com"
+          href="mailto:kealeboga.serapane24@gmail.com"
           class="email-link"
-          tiitle="email partricia"
-          >patricia@gmail.com</a
+          tiitle="email Nelly"
+          >kealeboga.serapane24@gmail.com</a
         >
       </div>
       <div class="social-links d-flex justify-content-center">
         <a
-          href="https://www.github.com/patricia"
+          href="https://github.com/kea-nelly"
           target="_blank"
           title="Github Profile"
         >
           <i class="fa-brands fa-github"></i
         ></a>
         <a
-          href="https://www.instagram.com/patricia"
+          href="linkedin.com/in/kealeboga-serapane"
           target="_blank"
-          title="Instagram Profile"
+          title="Linkedin Profile"
         >
-          <i class="fa-brands fa-square-instagram"></i
-        ></a>
-        <a
-          href="https://www.twitter.com/patricia"
-          target="_blank"
-          title="Twitter profile"
-        >
-          <i class="fa-brands fa-twitter"></i
-        ></a>
+          <i class="fa-brands fa-linkedin"></i>
+        </a>
       </div>
       <p class="text-center mt-5">
-        ✌️This project was coded by Shecodes, and it is<a
+        ✌️This project was coded by Kealeboga Nelly Serapane, and it is<a
           href="https://github.com/kea-nelly/protfolio-project"
           target="_blank"
         >
