--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Patricia is a front-end engineer based in Portugal"
+      content="Nelly is a front-end engineer based in South Africa"
     />
     <link
       rel="stylesheet"
@@ -46,7 +46,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles/portfolio.css" />
-    <title>Front-end developer - Patricia Pereira</title>
+    <title>Front-end developer - Nelly Kealeboga Serapane</title>
   </head>
 
   <body>
@@ -76,8 +76,8 @@
     </div>
     <div class="hero">
       <p>👋 Hello I am</p>
-      <h1>Patricia Pereira</h1>
-      <h2 class="mb-5">Front-end developer based in Portugal</h2>
+      <h1>Kealeboga Nelly Serapane</h1>
+      <h2 class="mb-5">Front-end developer based in South Africa</h2>
       <div>
         <a href="contact.html" class="btn btn-branding" title="contact me"
           >Contact me</a
@@ -100,10 +100,10 @@
           <div class="project-description">
             <h2 class="mb-5">Yogurt Project</h2>
             <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+              The yogurt project was the first project I did when I joined the
+              Shecodes journey with little experience of HTML, however managed
+              to build my 1st project all through the help and guidance of Matt,
+              the instructor.
             </p>
             <a href="work.html" class="btn btn-branding-outline">Learn more</a>
           </div>
@@ -115,10 +115,11 @@
           <div class="project-description">
             <h2 class="mb-5">Weather App</h2>
             <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+              The Weather project was a bit challenging and fun to build because
+              it was new to me and exicting for me because I developed skills
+              that helped me to complete the project. Making the website change
+              city names and the current weather at that particular city appear
+              was very interesting.
             </p>
             <a href="work.html" class="btn btn-branding-outline">Learn more</a>
           </div>
@@ -145,10 +146,8 @@
           <div class="project-description">
             <h2 class="mb-5">Dictionary App</h2>
             <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+              I am eagerly waiting to bulid this project so that I can add it to
+              my portfolio. The dictionary project is my next project to build.
             </p>
             <a href="work.html" class="btn btn-branding-outline">Learn more</a>
           </div>
@@ -171,37 +170,31 @@
         </div>
         <div class="d-flex justify-content-center mb-5">
           <a
-            href="mailto:patricia@gmail.com"
+            href="mailto:kealeboga.serapane24@gmail.com"
             class="email-link"
-            tiitle="email partricia"
-            >patricia@gmail.com</a
+            tiitle="email address"
+            >kealeboga.serapane24@gmail.com</a
           >
         </div>
+
         <div class="social-links d-flex justify-content-center">
           <a
-            href="https://www.github.com/patricia"
+            href="https://github.com/kea-nelly"
             target="_blank"
             title="Github Profile"
           >
             <i class="fa-brands fa-github"></i
           ></a>
           <a
-            href="https://www.instagram.com/patricia"
+            href="linkedin.com/in/kealeboga-serapane"
             target="_blank"
-            title="Instagram Profile"
+            title="Linkedin Profile"
           >
-            <i class="fa-brands fa-square-instagram"></i
-          ></a>
-          <a
-            href="https://www.twitter.com/patricia"
-            target="_blank"
-            title="Twitter profile"
-          >
-            <i class="fa-brands fa-twitter"></i
-          ></a>
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
         </div>
         <p class="text-center mt-5">
-          ✌️This project was coded by Shecodes, and it is<a
+          ✌️This project was coded by Kealeboga Nelly Serapane, and it is<a
             href="https://github.com/kea-nelly/protfolio-project"
             target="_blank"
           >
