--- a/contact.html
+++ b/contact.html
@@ -80,25 +80,26 @@
         </ul>
       </nav>
     </div>
-
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-5">Let's get in touch!</h1>
         <h3>Email</h3>
         <p>
-          <a href="mailto:partricia@gmail.com"> patricia@gmail.com </a>
+          <a href="mailto:kealeboga.serapane24@gmail.com" target="_blank"
+            >kealeboga.serapane24@gmail.com</a
+          >
         </p>
-        <h3>Twitter</h3>
-        <p>
-          <a href="https://www.twitter.com/patricia" target="_blank">
-            @patricia
-          </a>
-        </p>
+
         <h3>Instagram</h3>
         <p>
-          <a href="https://www.instagram.com/patricia.codes" target="_blank">
-            @partricai.codes
-          </a>
+          <a href="https://www.Instagram/nelly" target="_blank">@nelly.codes</a>
+        </p>
+
+        <h3>Twitter</h3>
+        <p>
+          <a href="https://Twitter.com/nellyserapane" target="_blank"
+            >@nellyserapane</a
+          >
         </p>
       </div>
     </div>
@@ -119,37 +120,31 @@
       </div>
       <div class="d-flex justify-content-center mb-5">
         <a
-          href="mailto:patricia@gmail.com"
+          href="mailto:kealeboga.serapane24@gmail.com"
           class="email-link"
-          tiitle="email partricia"
-          >patricia@gmail.com</a
+          tiitle="emailNelly"
+          >kealeboga.serapane24@gmail.com</a
         >
       </div>
+
       <div class="social-links d-flex justify-content-center">
         <a
-          href="https://www.github.com/patricia"
+          href="https://github.com/kea-nelly"
           target="_blank"
           title="Github Profile"
         >
           <i class="fa-brands fa-github"></i
         ></a>
         <a
-          href="https://www.instagram.com/patricia"
+          href="linkedin.com/in/kealeboga-serapane"
           target="_blank"
-          title="Instagram Profile"
+          title="Linkedin Profile"
         >
-          <i class="fa-brands fa-square-instagram"></i
-        ></a>
-        <a
-          href="https://www.twitter.com/patricia"
-          target="_blank"
-          title="Twitter profile"
-        >
-          <i class="fa-brands fa-twitter"></i
-        ></a>
+          <i class="fa-brands fa-linkedin"></i>
+        </a>
       </div>
       <p class="text-center mt-5">
-        ✌️This project was coded by Shecodes, and it is<a
+        ✌️This project was coded by Kealeboga Nelly Serapane, and it is<a
           href="https://github.com/kea-nelly/protfolio-project"
           target="_blank"
         >
