--- a/work.html
+++ b/work.html
@@ -46,7 +46,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles/portfolio.css" />
-    <title>Workspace - Patricia Pereira</title>
+    <title>Workspace - Kealeboga Nelly Serapane</title>
   </head>
 
   <body>
@@ -89,6 +89,14 @@
             />
             <h3 class="text-center m-0">Yogurt Project</h3>
             <p class="text-center text-muted">Built with HTML and CSS</p>
+            <div class="text-center mb-4">
+              <a
+                href="https://www.yogurt.shecodes.io"
+                class="btn btn-branding"
+                target="_blank"
+                >Launch Project</a
+              >
+            </div>
           </div>
 
           <div class="col-md-6 mb-4">
@@ -101,6 +109,14 @@
             <p class="text-center text-muted">
               Built with HTML, CSS and JavaScript
             </p>
+            <div class="text-center mb-4">
+              <a
+                href="https://shecodeplus-finalproject.netlify.app/"
+                class="btn btn-branding"
+                target="_blank"
+                >Launch Project</a
+              >
+            </div>
           </div>
 
           <div class="col-md-6 mb-4">
@@ -111,6 +127,14 @@
             />
             <h3 class="text-center m-0">Dictionary App</h3>
             <p class="text-center text-muted">Built with HTML, CSS and React</p>
+            <div class="text-center mb-4">
+              <a
+                href="https://www.dictionary.shecodes.io/"
+                class="btn btn-branding"
+                target="_blank"
+                >Launch Project</a
+              >
+            </div>
           </div>
 
           <div class="col-md-6 mb-4">
@@ -121,6 +145,14 @@
             />
             <h3 class="text-center m-0">Translation App</h3>
             <p class="text-center text-muted">Built with HTML, CSS and React</p>
+            <div class="text-center mb-4">
+              <a
+                href="work.html"
+                class="btn btn-branding-outline"
+                target="_blank"
+                >Coming soon</a
+              >
+            </div>
           </div>
         </div>
       </div>
@@ -142,37 +174,31 @@
       </div>
       <div class="d-flex justify-content-center mb-5">
         <a
-          href="mailto:patricia@gmail.com"
+          href="mailto:kealeboga.serapane24@gmail.com"
           class="email-link"
-          tiitle="email partricia"
-          >patricia@gmail.com</a
+          tiitle="emailNelly"
+          >kealeboga.serapane24@gmail.com</a
         >
       </div>
+
       <div class="social-links d-flex justify-content-center">
         <a
-          href="https://www.github.com/patricia"
+          href="https://github.com/kea-nelly"
           target="_blank"
           title="Github Profile"
         >
           <i class="fa-brands fa-github"></i
         ></a>
         <a
-          href="https://www.instagram.com/patricia"
+          href="linkedin.com/in/kealeboga-serapane"
           target="_blank"
-          title="Instagram Profile"
+          title="Linkedin Profile"
         >
-          <i class="fa-brands fa-square-instagram"></i
-        ></a>
-        <a
-          href="https://www.twitter.com/patricia"
-          target="_blank"
-          title="Twitter profile"
-        >
-          <i class="fa-brands fa-twitter"></i
-        ></a>
+          <i class="fa-brands fa-linkedin"></i>
+        </a>
       </div>
       <p class="text-center mt-5">
-        ✌️This project was coded by Shecodes, and it is<a
+        ✌️This project was coded by Kealeboga Nelly Serapane, and it is<a
           href="https://github.com/kea-nelly/protfolio-project"
           target="_blank"
         >
